feat: Temiz Gmail SMTP sistemi - basit ve çalışır
- 2273755 commit'ine geri dönüldü - temiz başlangıç
- Basit Gmail SMTP API oluşturuldu (/api/send-email)
- VisitorFormModal ve ParticipantFormModal Gmail SMTP'ye bağlandı
- Netlify Forms karmaşıklığı kaldırıldı
- App password: bjrw glnk zvpc ltma
- CC email: sezan1991@gmail.com
- Temiz, basit, çalışır kod

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@astrojs/sitemap": "^3.5.1",
     "@fontsource/roboto": "^5.2.6",
     "@tailwindcss/vite": "^4.1.12",
+    "@types/nodemailer": "^7.0.1",
     "astro": "^5.13.4",
     "lucide-astro": "^0.542.0",
+    "nodemailer": "^7.0.6",
     "tailwindcss": "^4.1.12"
   }
 }
