clean: Netlify Forms tamamen kaldırıldı - Gmail SMTP only
- netlify.toml'dan tüm form configurations kaldırıldı
- forms.astro detection file silindi
- Artık sadece Gmail SMTP kullanılıyor
- Temiz, basit yapı

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,157 +5,7 @@
 [build.environment]
   NODE_VERSION = "18"
 
-# Form notifications - Honeypot spam protection
-[[forms]]
-  name = "visitor-form"
-  
-  [[forms.notifications]]
-    type = "email"
-    event = "submission"
-    to = "info@turkel.com.tr"
-    subject = "🎯 Yeni Ziyaretçi Formu - Türkel Fuarcılık"
-    body = """
-    Yeni bir ziyaretçi formu gönderildi:
-    
-    📋 Form Bilgileri:
-    • Form Tipi: {{form-type}}
-    • Dil: {{language}}
-    • Gönderim Tarihi: {{created_at}}
-    
-    👤 Kişisel Bilgiler:
-    • Ad: {{firstName}}
-    • Soyad: {{lastName}}
-    • E-posta: {{email}}
-    • Telefon: {{phone}}
-    
-    🏢 Kurumsal Bilgiler:
-    • Firma Adı: {{companyName}}
-    • Faaliyet Alanı: {{businessArea}}
-    • Website: {{website}}
-    
-    🎪 Fuar Bilgileri:
-    • İlgilenilen Fuar: {{fair}}
-    
-    📝 Ek Notlar:
-    {{notes}}
-    """
-
-[[forms]]
-  name = "participant-form"
-  
-  [[forms.notifications]]
-    type = "email"
-    event = "submission"
-    to = "info@turkel.com.tr"
-    subject = "🎪 Yeni Katılımcı Formu - Türkel Fuarcılık"
-    body = """
-    Yeni bir katılımcı formu gönderildi:
-    
-    📋 Form Bilgileri:
-    • Form Tipi: {{form-type}}
-    • Dil: {{language}}
-    • Gönderim Tarihi: {{created_at}}
-    
-    👤 Kişisel Bilgiler:
-    • Ad: {{firstName}}
-    • Soyad: {{lastName}}
-    • E-posta: {{email}}
-    • Telefon: {{phone}}
-    
-    🏢 Kurumsal Bilgiler:
-    • Firma Adı: {{companyName}}
-    • Faaliyet Alanı: {{businessArea}}
-    • Website: {{website}}
-    
-    🎪 Fuar Bilgileri:
-    • Katılmak İstenilen Fuar: {{fair}}
-    
-    📝 Ek Bilgiler:
-    {{additionalInfo}}
-    """
-
-[[forms]]
-  name = "contact-form"
-  
-  [[forms.notifications]]
-    type = "email"
-    event = "submission"
-    to = "info@turkel.com.tr"
-    subject = "📧 Yeni İletişim Mesajı - Türkel Fuarcılık"
-    body = """
-    Yeni bir iletişim mesajı gönderildi:
-    
-    📋 Form Bilgileri:
-    • Form Tipi: {{form-type}}
-    • Dil: {{language}}
-    • Gönderim Tarihi: {{created_at}}
-    
-    👤 Kişisel Bilgiler:
-    • Ad: {{firstName}}
-    • Soyad: {{lastName}}
-    • E-posta: {{email}}
-    • Telefon: {{phone}}
-    
-    🏢 Kurumsal Bilgiler:
-    • Firma Adı: {{companyName}}
-    • Faaliyet Alanı: {{businessArea}}
-    • Ülke: {{country}}
-    • Şehir: {{city}}
-    
-    📝 Mesaj:
-    {{message}}
-    """
-
-[[forms]]
-  name = "contact-form-en"
-  
-  [[forms.notifications]]
-    type = "email"
-    event = "submission"
-    to = "info@turkel.com.tr"
-    subject = "📧 New Contact Message - Turkel Fair Organization"
-    body = """
-    A new contact message has been submitted:
-    
-    📋 Form Details:
-    • Form Type: {{form-type}}
-    • Language: {{language}}
-    • Submission Date: {{created_at}}
-    
-    👤 Personal Information:
-    • First Name: {{firstName}}
-    • Last Name: {{lastName}}
-    • Email: {{email}}
-    • Phone: {{phone}}
-    
-    🏢 Company Information:
-    • Company Name: {{companyName}}
-    • Business Area: {{businessArea}}
-    • Country: {{country}}
-    • City: {{city}}
-    
-    📝 Message:
-    {{message}}
-    """
-
-[[forms]]
-  name = "newsletter-footer"
-  
-  [[forms.notifications]]
-    type = "email"
-    event = "submission"
-    to = "info@turkel.com.tr"
-    subject = "📰 Yeni Bülten Aboneliği - Türkel Fuarcılık"
-    body = """
-    Yeni bir bülten aboneliği:
-    
-    📋 Abonelik Bilgileri:
-    • Form Tipi: {{form-type}}
-    • Dil: {{language}}
-    • Gönderim Tarihi: {{created_at}}
-    
-    📧 E-posta: {{email}}
-    """
+# Netlify Forms kaldırıldı - Gmail SMTP kullanıyoruz
 
 # Redirects handled by public/_redirects file
 
