--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/netlify": "^6.5.9",
     "@astrojs/sitemap": "^3.5.1",
+    "@emailjs/browser": "^4.4.1",
     "@fontsource/roboto": "^5.2.6",
     "@tailwindcss/vite": "^4.1.12",
     "@types/nodemailer": "^7.0.1",
