--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/netlify": "^6.5.9",
     "@astrojs/sitemap": "^3.5.1",
     "@emailjs/browser": "^4.4.1",
@@ -18,6 +19,7 @@
     "astro": "^5.13.4",
     "lucide-astro": "^0.542.0",
     "nodemailer": "^7.0.6",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "typescript": "^5.9.2"
   }
 }
