--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -66,6 +66,7 @@ collections:
               - {label: "Fuar Adı (EN)", name: "name_en", widget: "string", hint: "İngilizce fuar adı"}
               - {label: "📅 Başlangıç Tarihi", name: "start_date", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false, hint: "Fuar başlangıç tarihi"}
               - {label: "📅 Bitiş Tarihi", name: "end_date", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false, hint: "Fuar bitiş tarihi"}
+              - {label: "📅 Tarihi Gizle", name: "hide_dates", widget: "boolean", default: false, hint: "İşaretlenirse frontend'te 'Tarih yakında açıklanacak' gösterilir"}
               - {label: "Konum (TR)", name: "location_tr", widget: "string", hint: "Şehir, Ülke formatında"}
               - {label: "Konum (EN)", name: "location_en", widget: "string", hint: "City, Country formatında"}
               - {label: "Sektör", name: "sector", widget: "select", options: ["Moda ve Tekstil", "Ev Tekstili ve Dekorasyon", "Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları", "Kalıp & Plastik, İhtisas, Havuz", "Deri Fuarları & Güvenlik Sistemleri Fuarları", "Güzellik ve Kozmetik", "Enerji", "İnşaat", "Diğer"], allow_add: true}
