--- a/src/content/fair-years/2025.yml
+++ b/src/content/fair-years/2025.yml
@@ -33,6 +33,7 @@ fairs:
       name_tr: BOOT DUSSELDORF
       location_en: DUSSELDORF, GERMANY
       name_en: BOOT DUSSELDORF
+      hide_dates: false
     visuals:
       logo: /images/logo-boot.png
       background_image: /images/gorsel-boot.avif
@@ -54,6 +55,7 @@ fairs:
       name_tr: 17.HOMEDECO KAZAKİSTAN
       location_en: ALMATY, KAZAKHSTAN
       name_en: 17TH HOMEDECO KAZAKHSTAN
+      hide_dates: false
     visuals:
       logo: /images/fuarlar-logo.png
       background_image: /images/gorsel.jpg
@@ -75,6 +77,7 @@ fairs:
       name_tr: 43.WEDDING FASHION MOSCOW
       location_en: MOSCOW, RUSSIA
       name_en: 43TH WEDDING FASHION MOSCOW
+      hide_dates: false
     visuals:
       logo: /images/logo.png
       background_image: /images/image_1_48.webp
@@ -96,6 +99,7 @@ fairs:
       name_tr: PARIS BRIDAL FAIR
       location_en: PARIS, FRANCE
       name_en: PARIS BRIDAL FAIR
+      hide_dates: false
     visuals:
       logo: /images/logo-parisbridal.jpg
       background_image: /images/2019-gelinlik-trendleri-neler-1.jpg
@@ -118,6 +122,7 @@ fairs:
       name_tr: ELECTRO
       location_en: MOSCOW, RUSSIA
       name_en: ELECTRO
+      hide_dates: false
     visuals:
       logo: /images/fair-logo-electro.png
       background_image: /images/gorsel.jpg
@@ -140,6 +145,7 @@ fairs:
       name_tr: MIDDLE EAST ENERGY
       location_en: DUBAI, UAE
       name_en: MIDDLE EAST ENERGY
+      hide_dates: false
     visuals:
       logo: /images/fair-logo-mee.jpg
       background_image: /images/fair-bg-mee.png
@@ -161,6 +167,7 @@ fairs:
       name_tr: 28.LESHOW MOSKOVA
       location_en: MOSCOW, RUSSIA
       name_en: 28TH LESHOW MOSCOW
+      hide_dates: false
     visuals:
       logo: /images/leshow-logo-fair.png
       background_image: /images/0161.jpg
@@ -182,6 +189,7 @@ fairs:
       name_tr: KAZAN FORUM & RUSYA HELAL EXPO
       location_en: KAZAN, TATARSTAN
       name_en: KAZAN FORUM & RUSYA HELAL EXPO
+      hide_dates: false
     visuals:
       logo: /images/fair-logo-kazan.jpg
       background_image: /images/fair-bg-kazan.png
@@ -203,6 +211,7 @@ fairs:
       name_tr: ROSMOULD / ROSPLAST
       location_en: MOSCOW, RUSSIA
       name_en: ROSMOULD / ROSPLAST
+      hide_dates: false
     visuals:
       logo: /images/fair-logo-rosmould.png
       background_image: /images/download.jpg
@@ -224,6 +233,7 @@ fairs:
       name_tr: KIND+JUGEND
       location_en: COLOGNE, GERMANY
       name_en: KIND+JUGEND
+      hide_dates: false
     visuals:
       logo: /images/kind-logo-fair.png
       background_image: /images/ekran-resmi-2025-09-03-22.48.44.png
@@ -245,6 +255,7 @@ fairs:
       name_tr: HARROGATE BRIDAL – WHITE GALLERY
       location_en: HARROGATE, ENGLAND
       name_en: HARROGATE BRIDAL – WHITE GALLERY
+      hide_dates: false
     visuals:
       logo: /images/logo-bridal.png
       background_image: /images/2019-gelinlik-trendleri-neler-1.jpg
@@ -266,6 +277,7 @@ fairs:
       name_tr: KIDS & TOYS
       location_en: RIYADH, SAUDI ARABIA
       name_en: KIDS & TOYS
+      hide_dates: false
     visuals:
       logo: /images/logo-kidstoys.png
       background_image: /images/gorsel-kidstoys.jpg
@@ -288,6 +300,7 @@ fairs:
       name_tr: INTERLIGHT CENTRAL ASIA
       location_en: ASTANA, KAZAKHSTAN
       name_en: INTERLIGHT CENTRAL ASIA
+      hide_dates: false
     visuals:
       logo: /images/logo-interlight.png
       background_image: /images/gorsel-interlight.jpg
@@ -309,6 +322,7 @@ fairs:
       name_tr: SAUDI LIFESTYLE WEEK
       location_en: RIYADH, SAUDI ARABIA
       name_en: SAUDI LIFESTYLE WEEK
+      hide_dates: false
     visuals:
       logo: /images/logo-saudi.jpg
       background_image: /images/gorsel-saudi.jpg
@@ -332,6 +346,7 @@ fairs:
       name_tr: HOMETEXTILE & DESIGN
       location_en: MOSCOW, RUSSIA
       name_en: HOMETEXTILE & DESIGN
+      hide_dates: false
     visuals:
       logo: /images/logo-hometextile.png
       background_image: /images/gorsel-hometextile.jpg
@@ -353,6 +368,7 @@ fairs:
       name_tr: INTERLIGHT SMART CITY & HOME
       location_en: MOSCOW, RUSSIA
       name_en: INTERLIGHT SMART CITY & HOME
+      hide_dates: false
     visuals:
       logo: /images/logo-ınterlıght.png
       background_image: /images/gorsel-interlightsmart.jpg
@@ -374,6 +390,7 @@ fairs:
       name_tr: PISCINA BARCELONA
       location_en: BARCELONA, SPAIN
       name_en: PISCINA BARCELONA
+      hide_dates: false
     visuals:
       logo: /images/logo-piscina.png
       background_image: /images/gorsel-piscina.jpg
@@ -395,6 +412,7 @@ fairs:
       name_tr: "MEBEL "
       location_en: MOSCOW, RUSSIA
       name_en: "MEBEL "
+      hide_dates: false
     visuals:
       logo: /images/logo-mebel.png
       background_image: /images/gorsel-mebel.png
@@ -418,6 +436,7 @@ fairs:
       name_tr: WOODEX
       location_en: MOSCOW, RUSSIA
       name_en: WOODEX
+      hide_dates: false
     visuals:
       logo: /images/logo-woodex.png
       background_image: /images/gorsel-woodex.png
